--- a/sass/home.css
+++ b/sass/home.css
@@ -77,34 +77,82 @@ img {
   left: 1%;
   margin: -10% auto 0;
   z-index: -1; }
+  @media (min-width: 20em) and (max-width: 47.99em) {
+    .shadow {
+      display: none; } }
+
+@media (min-width: 20em) and (max-width: 47.99em) {
+  .topnav li, .dropdown .dropbtn {
+    display: none; } }
 
 section {
   width: 62%;
   display: flex;
   justify-content: space-between;
   margin: 50px auto; }
+  @media (min-width: 20em) and (max-width: 47.99em) {
+    section {
+      flex-wrap: wrap;
+      width: 80%; } }
+  @media (min-width: 48em) and (max-width: 81.24em) {
+    section {
+      width: 88%; } }
 
 .header {
   display: flex;
-  flex: space-between;
   justify-content: space-between;
   height: 168px;
   align-items: center;
   margin: 0 auto;
   width: 60%; }
+  @media (min-width: 20em) and (max-width: 47.99em) {
+    .header {
+      width: 88%; } }
+  @media (min-width: 48em) and (max-width: 81.24em) {
+    .header {
+      width: 88%; } }
   .header__menu {
-    display: flex; }
+    display: flex;
+    overflow: hidden; }
+    @media (max-width: 47.99em) {
+      .header__menu {
+        display: none; } }
+  @media (max-width: 47.99em) {
+    .header__responsive {
+      position: absolute;
+      top: 21%;
+      width: 100%;
+      background-color: #ffffff;
+      right: 0;
+      z-index: 1;
+      display: block; } }
   .header__list {
     flex: auto;
     margin-left: 30px;
     font-size: 14px;
     line-height: 20px;
     font-weight: 600; }
+    @media (max-width: 47.99em) {
+      .header__list {
+        float: none;
+        display: block;
+        text-align: left;
+        padding: 19px; } }
   .header__icon {
     display: none; }
+    @media (max-width: 47.99em) {
+      .header__icon {
+        display: block;
+        position: absolute;
+        right: 19px;
+        top: 61px; } }
 
+@media (min-width: 48em) {
+  .container {
+    flex-wrap: wrap; } }
 .container__description, .container__image {
-  flex: 1 1 20em; }
+  flex: 1 1 20em;
+  margin-top: 25px; }
 .container__section {
   width: 1323px;
   height: 233px;
@@ -114,7 +162,7 @@ section {
   left: -142px; }
 .container__title {
   font-size: 40px;
-  width: 76%;
+  width: 72%;
   line-height: 50px;
   margin-top: 60px; }
 .container__text {
@@ -152,12 +200,22 @@ section {
   .solutions__text {
     font-size: 24px;
     line-height: 32px;
-    flex: 1 1 20em; }
+    flex: 1 1 20em;
+    margin-left: 40px; }
+    @media (max-width: 47.99em) {
+      .solutions__text {
+        margin: 20px 0 0 0; } }
   .solutions__toptext {
     display: flex;
     flex-direction: row; }
   .solutions__bottom {
     padding: 36px 0px 0px 36px; }
+    @media (max-width: 47.99em) {
+      .solutions__bottom {
+        padding: 80px 0px 0px 36px; } }
+    @media (min-width: 48em) {
+      .solutions__bottom {
+        padding: 70px 0px 0px 36px; } }
   .solutions__consumer {
     height: 64px;
     font-style: italic; }
@@ -236,10 +294,17 @@ section {
   text-align: center;
   align-items: center;
   position: relative; }
+  @media (max-width: 47.99em) {
+    .customerview {
+      width: 95%; } }
   .customerview__title {
     margin: 30px 0;
     font-weight: 600;
     font-size: 24px; }
+  @media (max-width: 47.99em) {
+    .customerview__image {
+      width: 36%;
+      float: left; } }
   .customerview__shadow {
     width: 92%;
     left: 4%;
@@ -257,7 +322,6 @@ section {
     box-shadow: 7px 11px 23px 0px #d7e0f1de; }
   .customerview__slideshow {
     width: 100%;
-    max-width: 1000px;
     position: relative;
     margin: auto; }
   .customerview__dot {
@@ -286,6 +350,11 @@ section {
     top: 59px;
     font-style: italic;
     text-align: left; }
+    @media (max-width: 47.99em) {
+      .customerview__numbertext {
+        right: 0px;
+        width: 63%;
+        line-height: 17px; } }
   .customerview__detail {
     margin-bottom: 10px; }
   .customerview__customerview__head {
@@ -305,12 +374,17 @@ section {
     opacity: 1; } }
 .aboutingo {
   position: relative;
-  width: 80%; }
+  width: 80%;
+  text-align: center;
+  justify-content: center; }
+  @media (max-width: 47.99em) {
+    .aboutingo {
+      width: 95%;
+      height: 330px; } }
   .aboutingo__description {
     position: absolute;
     color: #ffffff;
-    top: 22%;
-    left: 35%;
+    top: 13%;
     text-align: center; }
   .aboutingo__title {
     color: #05F3F3;
@@ -318,19 +392,19 @@ section {
     margin-bottom: 27px; }
   .aboutingo__emaildetail {
     font-size: 16px;
-    margin-bottom: 50px; }
+    margin-bottom: 32px; }
   .aboutingo__email {
     border: none;
     background: transparent;
     border-bottom: 1px solid #fff;
-    width: 376px;
+    width: 77%;
     color: #ffffff;
     text-align: center;
     font-size: 14px;
     padding-bottom: 8px; }
   .aboutingo__btn {
     display: block;
-    margin: 32px auto;
+    margin: 17px auto;
     text-transform: uppercase;
     width: 165px;
     height: 42px;
@@ -345,6 +419,9 @@ section {
   .footer__services, .footer__address {
     margin-bottom: 60px;
     width: 45%; }
+    @media (max-width: 47.99em) {
+      .footer__services, .footer__address {
+        width: 100%; } }
   .footer__title {
     font-size: 24px;
     margin: 30px 0;
@@ -354,7 +431,7 @@ section {
   .footer__detail {
     margin-bottom: 30px;
     line-height: 22px; }
-  .footer .footer__land {
+  .footer__land {
     margin-right: 35px;
     font-size: 14px;
     text-decoration: underline;
@@ -370,5 +447,8 @@ section {
   .copyright__policy, .copyright__condition {
     margin-left: 40px;
     font-weight: 600; }
+    @media (max-width: 47.99em) {
+      .copyright__policy, .copyright__condition {
+        margin: 10px; } }
 
 /*# sourceMappingURL=home.css.map */
